# uneex_hw

./: README.md
01_TerminalProject/: Makefile  Show.c
02_Multifile/: Makefile
03_Text/: randomize.sh
04_Debugging/: 1.gdb  2.gdb  Makefile  range.c
05_Regexps/: Makefile  esub.c
06_Tracing/: Makefile  move.c  test.sh  unlink.c
08_I18n/: configure.ac  guess.c  ru.po
09_PatchDiff/: Makefile  makeMaze.c  rand.patch  size.patch  sym.patch
10_LibTesting/: Makefile.am  configure.ac
10_LibTesting/src/: Makefile.am  Makefile.in  buf.h  libbuf.c
10_LibTesting/tests/: Makefile.am  Makefile.in  dummy.ts
11_Documenting/: Doxyfile.in  Makefile.am  guess.c  guess.pot  ru.po
12_InstallPackaging/: Makefile.am  configure.ac  guess.c  guess.h  guess.pot  ru.po  tests.ts
